--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
             </div>
         </div>
         <div class="panel-body">
-            <img class="#" id="crystal1" src="assets/images/c4.png" alt="Crystal 1">
-            <img class="#" id="crystal2" src="assets/images/c4.png" alt="Crystal 2">
-            <img class="#" id="crystal3" src="assets/images/c4.png" alt="Crystal 3">
-            <img class="#" id="crystal4" src="assets/images/c4.png" alt="Crystal 4">
+            <img class="crysicon" id="crystal1" src="assets/images/c4.png" alt="Crystal 1">
+            <img class="crysicon" id="crystal2" src="assets/images/c4.png" alt="Crystal 2">
+            <img class="crysicon" id="crystal3" src="assets/images/c4.png" alt="Crystal 3">
+            <img class="crysicon" id="crystal4" src="assets/images/c4.png" alt="Crystal 4">
         </div>
     </div>
 
